--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
   rel="stylesheet"
   href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
 />
+  <link
+  rel="stylesheet"
+  href="./assets/styles/admin.css"
+/>
 <link
 rel="stylesheet"
 href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
