--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,12 @@
 />
   <link
   rel="stylesheet"
-  href="./assets/styles/admin.css"
-/>
+  href="./assets/styles/admin.css"/>
+
+  <link
+  rel="stylesheet"
+  href="./assets/styles/animated.css"/>
+
 <link
 rel="stylesheet"
 href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
@@ -33,11 +37,14 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
 <body>
   <app-root></app-root>
 
-  <script
+  <!-- <script
   src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
   integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
   crossorigin="anonymous"
-></script>
+></script> -->
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
 <script
   src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
   integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
