Modificaciones en tamaño de tarjetas

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
   rel="stylesheet"
   href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
 />
-  <link
+  <!-- <link
   rel="stylesheet"
-  href="./assets/styles/admin.css"/>
+  href="./assets/styles/admin.css"/> -->
 
   <link
   rel="stylesheet"
